Fix some custom props

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </head>
 
 <body>
-
+  <header class="site-header">
+    <div class="container"></div>
+  </header>
 
 
   <script src="js/main.js"></script>
