--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
 
 <body>
   <header class="site-header">
-    <div class="container"></div>
+    <div class="site-header__container container">
+      <img class="site-header__logo logo" src="img/bookmark-logo.svg" alt="Site logo" width="150" height="25">
+
+      <nav class="site-header__sitenav sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item"><a class="sitenav__link" href="">Features</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="">Pricing</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="">Contact</a></li>
+        </ul>
+      </nav>
+
+      <button class="button button-red" type="button">Login</button>
+    </div>
   </header>
 
 
