Fix site-header elements style

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 <body>
   <header class="site-header">
     <div class="site-header__container container">
-      <img class="site-header__logo logo" src="img/bookmark-logo.svg" alt="Site logo" width="150" height="25">
+      <a class="site-header__logo logo" href="">
+        <img class="logo__img" src="img/logo.svg" alt="Site logo" width="149" height="25">
+      </a>
 
       <nav class="site-header__sitenav sitenav">
         <ul class="sitenav__list">
@@ -30,7 +32,7 @@
         </ul>
       </nav>
 
-      <button class="button button-red" type="button">Login</button>
+      <a class="button button--red">Login</a>
     </div>
   </header>
 
