Add hero section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
     </div>
   </header>
 
+  <main class="main-content">
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero__container container">
+        <div class="hero__content">
+          <h1 class="hero__title">A Simple Bookmark <br> Manager</h1>
+          <p class="hero__description">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+          <div class="hero__actions">
+            <a class="hero__actions-item button buttun--blue" href="">Get it on Chrome</a>
+            <a class="hero__actions-item button button-grey" href="">Get it on Firefox</a>
+          </div>
+        </div>
+
+        <img class="hero-img" src="img/hero-tablet.svg" alt="tablet img in hero" width="578" height="385">
+      </div>
+    </div>
+  </main>
+
 
   <script src="js/main.js"></script>
 </body>
