Add class to header button

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
 
-      <a class="button button--red">Login</a>
+      <a class="button btn--site-header button--red">Login</a>
     </div>
   </header>
 
@@ -43,9 +43,10 @@
         <div class="hero__content">
           <h1 class="hero__title">A Simple Bookmark <br> Manager</h1>
           <p class="hero__description">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+
           <div class="hero__actions">
-            <a class="hero__actions-item button buttun--blue" href="">Get it on Chrome</a>
-            <a class="hero__actions-item button button-grey" href="">Get it on Firefox</a>
+            <a class="hero__actions-item button button--blue" href="">Get it on Chrome</a>
+            <a class="hero__actions-item button button--grey" href="">Get it on Firefox</a>
           </div>
         </div>
 
