Add global styles to features sections

--- a/index.html
+++ b/index.html
@@ -53,6 +53,37 @@
         <img class="hero-img" src="img/hero-tablet.svg" alt="tablet img in hero" width="578" height="385">
       </div>
     </div>
+
+    <!-- Features -->
+    <section class="section">
+      <div class="container">
+        <div class="section__info">
+          <h2 class="section__title">Features</h2>
+          <p class="section__description">Our aim is to make it quick and easy for you to access your <br> favourite websites. Your bookmarks sync between your devices <br> so you can access them on the go.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Download the extension -->
+    <section class="section">
+      <div class="container">
+        <div class="section__info">
+          <h2 class="section__title">Download the extension</h2>
+          <p class="section__description">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- FAQ -->
+    <section class="section">
+      <div class="container">
+        <div class="section__info">
+          <h2 class="section__title">Frequently Asked Questions</h2>
+          <p class="section__description">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+        </div>
+      </div>
+    </section>
+
   </main>
 
 
