Add extensions section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,33 @@
           <h2 class="section__title">Download the extension</h2>
           <p class="section__description">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
         </div>
+        <ul class="section__ex-list">
+
+          <li class="section__ex-item">
+            <img class="section__ex-img" src="img/chrome.svg" alt="" width="100" height="100">
+            <h3 class="section__ex-title">Add to Chrome</h3>
+            <p class="section__ex-description">Minimum version 62</p>
+            <button class="button button--blue button--block">Add & Install Extension</button>
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
+          </li>
+
+          <li class="section__ex-item">
+            <img class="section__ex-img" src="img/firefox.svg" alt="" width="100" height="100">
+            <h3 class="section__ex-title">Add to Firefox</h3>
+            <p class="section__ex-description">Minimum version 55</p>
+            <button class="button button--blue button--block">Add & Install Extension</button>
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
+          </li>
+
+          <li class="section__ex-item">
+            <img class="section__ex-img" src="img/opera.svg" alt="" width="100" height="100">
+            <h3 class="section__ex-title">Add to Opera</h3>
+            <p class="section__ex-description">Minimum version 46</p>
+            <button class="button button--blue button--block">Add & Install Extension</button>
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
+          </li>
+
+        </ul>
       </div>
     </section>
 
