Add not full features section

--- a/index.html
+++ b/index.html
@@ -55,12 +55,35 @@
     </div>
 
     <!-- Features -->
-    <section class="section">
+    <section class="section features">
       <div class="container">
         <div class="section__info">
           <h2 class="section__title">Features</h2>
           <p class="section__description">Our aim is to make it quick and easy for you to access your <br> favourite websites. Your bookmarks sync between your devices <br> so you can access them on the go.</p>
         </div>
+
+        <ul class="section__features-list">
+          <li class="section__features-item item-active">
+            <h4 class="section__features-item-title">Simple Bookmarking</h4>
+          </li>
+          <li class="section__features-item">
+            <h4 class="section__features-item-title">Speedy Searching</h4>
+          </li>
+          <li class="section__features-item">
+            <h4 class="section__features-item-title">Easy Sharing</h4>
+          </li>
+        </ul>
+
+        <div class="section__features-wrapper features-main">
+          <img class="section__features-img" src="img/features-tablet.svg" alt="" width="536" height="346">
+
+          <div class="features-main__info">
+            <h3 class="features-main__title">Bookmark in one click</h3>
+            <p class="features-main__description">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+            <a class="button button--blue" href="">More Info</a>
+          </div>
+        </div>
+
       </div>
     </section>
 
