Add active status to clicked tabs__item

--- a/index.html
+++ b/index.html
@@ -62,20 +62,24 @@
           <p class="section__description">Our aim is to make it quick and easy for you to access your <br> favourite websites. Your bookmarks sync between your devices <br> so you can access them on the go.</p>
         </div>
 
+
         <!-- TABS -->
         <div class="tabs">
+
           <!-- TABS-LIST -->
           <ul class="tabs__list">
+
             <li class="tabs__item tabs__item--active">
-              <a class="tabs__link" href="#feature-simple-bookmarking">Simple Bookmarking</a>
+              <a class="tabs__link js-tab-link" href="#feature-simple-bookmarking">Simple Bookmarking</a>
             </li>
             <li class="tabs__item">
-              <a class="tabs__link" href="#feature-speedy-searching">Speedy Searching</a>
+              <a class="tabs__link js-tab-link" href="#feature-speedy-searching">Speedy Searching</a>
             </li>
             <li class="tabs__item">
-              <a class="tabs__link" href="#feature-easy-sharing">Easy Sharing</a>
+              <a class="tabs__link js-tab-link" href="#feature-easy-sharing">Easy Sharing</a>
             </li>
           </ul>
+
         </div>
 
       </div>
@@ -134,7 +138,7 @@
             <h3 class="section__ex-title">Add to Chrome</h3>
             <p class="section__ex-description">Minimum version 62</p>
             <button class="button button--blue button--block">Add & Install Extension</button>
-            <!-- <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height=""> -->
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
           </li>
 
           <li class="section__ex-item">
@@ -142,7 +146,7 @@
             <h3 class="section__ex-title">Add to Firefox</h3>
             <p class="section__ex-description">Minimum version 55</p>
             <button class="button button--blue button--block">Add & Install Extension</button>
-            <!-- <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height=""> -->
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
           </li>
 
           <li class="section__ex-item">
@@ -150,7 +154,7 @@
             <h3 class="section__ex-title">Add to Opera</h3>
             <p class="section__ex-description">Minimum version 46</p>
             <button class="button button--blue button--block">Add & Install Extension</button>
-            <!-- <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height=""> -->
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
           </li>
 
         </ul>
