Make previos update code easier

--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
           <ul class="tabs__list">
 
             <li class="tabs__item tabs__item--active">
-              <a class="tabs__link js-tab-link" href="#feature-simple-bookmarking">Simple Bookmarking</a>
+              <a class="tabs__link js-tab-link" href="#feature-simple-bookmarking" data-tab-target="#feature-simple-bookmarking">Simple Bookmarking</a>
             </li>
+
             <li class="tabs__item">
-              <a class="tabs__link js-tab-link" href="#feature-speedy-searching">Speedy Searching</a>
+              <a class="tabs__link js-tab-link" href="#feature-speedy-searching" data-tab-target="#feature-speedy-searching">Speedy Searching</a>
             </li>
+
             <li class="tabs__item">
-              <a class="tabs__link js-tab-link" href="#feature-easy-sharing">Easy Sharing</a>
+              <a class="tabs__link js-tab-link" href="#feature-easy-sharing" data-tab-target="#feature-easy-sharing">Easy Sharing</a>
             </li>
           </ul>
 
