Fix bem mistakes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </ul>
       </nav>
 
-      <a class="button btn--site-header button--red">Login</a>
+      <a class="button site-header__btn button--red">Login</a>
     </div>
   </header>
 
@@ -87,39 +87,39 @@
       </div>
 
       <!-- TABS-CONTENT -->
-      <div class="tabs__panels">
+      <div class="tabpanels">
         <div class="container">
-          <div class="tabs__panel tabs__panel--active" id="feature-simple-bookmarking">
-                <section class="feature-tab-panel">
-                  <img class="feature-tab-panel__img" src="img/feature-1.svg" alt="Bookmark manager illustration" width="536" height="346">
-                  <div class="feature-tab-panel__info">
-                    <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
-                    <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
-                    <a class="button button--blue" href="">More Info</a>
-                  </div>
-                </section>
+          <div class="tabpanels__item tabpanels__item--active" id="feature-simple-bookmarking">
+            <section class="feature-tab-panel">
+              <img class="feature-tab-panel__img" src="img/feature-1.svg" alt="Bookmark manager illustration" width="536" height="346">
+              <div class="feature-tab-panel__info">
+                <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
+                <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                <a class="button button--blue" href="">More Info</a>
+              </div>
+            </section>
           </div>
 
-          <div class="tabs__panel" id="feature-speedy-searching">
-                <section class="feature-tab-panel">
-                  <img class="feature-tab-panel__img" src="img/feature-2.svg" alt="Bookmark search illustration" width="468" height="393">
-                  <div class="feature-tab-panel__info">
-                    <h3 class="feature-tab-panel__title">Intelligent search</h3>
-                    <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
-                    <a class="button button--blue" href="">More Info</a>
-                  </div>
-                </section>
+          <div class="tabpanels__item" id="feature-speedy-searching">
+            <section class="feature-tab-panel">
+              <img class="feature-tab-panel__img" src="img/feature-2.svg" alt="Bookmark search illustration" width="468" height="393">
+              <div class="feature-tab-panel__info">
+                <h3 class="feature-tab-panel__title">Intelligent search</h3>
+                <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                <a class="button button--blue" href="">More Info</a>
+              </div>
+            </section>
           </div>
 
-          <div class="tabs__panel" id="feature-easy-sharing">
-                <section class="feature-tab-panel">
-                  <img class="feature-tab-panel__img" src="img/feature-3.svg" alt="Bookmark share illustration" width="440" height="380">
-                  <div class="feature-tab-panel__info">
-                    <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
-                    <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
-                    <a class="button button--blue" href="">More Info</a>
-                  </div>
-                </section>
+          <div class="tabpanels__item" id="feature-easy-sharing">
+            <section class="feature-tab-panel">
+              <img class="feature-tab-panel__img" src="img/feature-3.svg" alt="Bookmark share illustration" width="440" height="380">
+              <div class="feature-tab-panel__info">
+                <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
+                <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                <a class="button button--blue" href="">More Info</a>
+              </div>
+            </section>
           </div>
         </div>
       </div>
@@ -140,7 +140,7 @@
             <h3 class="section__ex-title">Add to Chrome</h3>
             <p class="section__ex-description">Minimum version 62</p>
             <button class="button button--blue button--block">Add & Install Extension</button>
-            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="">
           </li>
 
           <li class="section__ex-item">
@@ -148,7 +148,7 @@
             <h3 class="section__ex-title">Add to Firefox</h3>
             <p class="section__ex-description">Minimum version 55</p>
             <button class="button button--blue button--block">Add & Install Extension</button>
-            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="">
           </li>
 
           <li class="section__ex-item">
@@ -156,7 +156,7 @@
             <h3 class="section__ex-title">Add to Opera</h3>
             <p class="section__ex-description">Minimum version 46</p>
             <button class="button button--blue button--block">Add & Install Extension</button>
-            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="" width="" height="">
+            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="">
           </li>
 
         </ul>
