--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="container">
           <div class="tabpanels__item tabpanels__item--active" id="feature-simple-bookmarking">
             <section class="feature-tab-panel">
-              <img class="feature-tab-panel__img" src="img/feature-1.svg" alt="Bookmark manager illustration" width="536" height="346">
+              <img class="feature-tab-panel__img feature-tab-panel__img--bookmark" src="img/feature-1.svg" alt="Bookmark manager illustration" width="536" height="346">
               <div class="feature-tab-panel__info">
                 <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
                 <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
@@ -102,7 +102,7 @@
 
           <div class="tabpanels__item" id="feature-speedy-searching">
             <section class="feature-tab-panel">
-              <img class="feature-tab-panel__img" src="img/feature-2.svg" alt="Bookmark search illustration" width="468" height="393">
+              <img class="feature-tab-panel__img feature-tab-panel__img--search" src="img/feature-2.svg" alt="Bookmark search illustration" width="468" height="393">
               <div class="feature-tab-panel__info">
                 <h3 class="feature-tab-panel__title">Intelligent search</h3>
                 <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
@@ -113,7 +113,7 @@
 
           <div class="tabpanels__item" id="feature-easy-sharing">
             <section class="feature-tab-panel">
-              <img class="feature-tab-panel__img" src="img/feature-3.svg" alt="Bookmark share illustration" width="440" height="380">
+              <img class="feature-tab-panel__img feature-tab-panel__img--share" src="img/feature-3.svg" alt="Bookmark share illustration" width="440" height="380">
               <div class="feature-tab-panel__info">
                 <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
                 <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
