Fix extension code

--- a/index.html
+++ b/index.html
@@ -127,39 +127,42 @@
     </section>
 
     <!-- Download the extension -->
-    <section class="section">
+    <section class="extensions section">
       <div class="container">
         <div class="section__info">
           <h2 class="section__title">Download the extension</h2>
           <p class="section__description">We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize.</p>
         </div>
-        <ul class="section__ex-list">
 
-          <li class="section__ex-item">
-            <img class="section__ex-img" src="img/chrome.svg" alt="" width="100" height="100">
-            <h3 class="section__ex-title">Add to Chrome</h3>
-            <p class="section__ex-description">Minimum version 62</p>
-            <button class="button button--blue button--block">Add & Install Extension</button>
-            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="">
-          </li>
+        <div class="extensions__inner">
+          <ul class="extensions__list">
 
-          <li class="section__ex-item">
-            <img class="section__ex-img" src="img/firefox.svg" alt="" width="100" height="100">
-            <h3 class="section__ex-title">Add to Firefox</h3>
-            <p class="section__ex-description">Minimum version 55</p>
-            <button class="button button--blue button--block">Add & Install Extension</button>
-            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="">
-          </li>
+            <li class="extensions__item extension">
+              <img class="extension__img" src="img/chrome.svg" alt="Chrome logo" width="105" height="100">
+              <h3 class="extension__title">Add to Chrome</h3>
+              <p class="extension__browser-version">Minimum version 62</p>
+              <a class="button button--blue button--block" href="https://www.google.com/chrome/?brand=BNSD&gclid=CjwKCAjw44mlBhAQEiwAqP3eVkNA_AP8Tmx-NdORS6mQQ0a9GTAhLeGKR-ymy-yeRuO4hMImKR6LXRoCUSwQAvD_BwE&gclsrc=aw.ds" target="_blank">Add & Install Extension</a>
+              <!-- <img class="extension__bg-img" src="img/extansion-dot.svg" alt=""> -->
+            </li>
 
-          <li class="section__ex-item">
-            <img class="section__ex-img" src="img/opera.svg" alt="" width="100" height="100">
-            <h3 class="section__ex-title">Add to Opera</h3>
-            <p class="section__ex-description">Minimum version 46</p>
-            <button class="button button--blue button--block">Add & Install Extension</button>
-            <img class="section__ex-bg-img" src="img/extansion-dot.svg" alt="">
-          </li>
+            <li class="extensions__item extension">
+              <img class="extension__img" src="img/firefox.svg" alt="Firefox logo" width="105" height="100">
+              <h3 class="extension__title">Add to Firefox</h3>
+              <p class="extension__browser-version">Minimum version 55</p>
+              <a class="button button--blue button--block" href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">Add & Install Extension</a>
+              <!-- <img class="extension__bg-img" src="img/extansion-dot.svg" alt=""> -->
+            </li>
 
-        </ul>
+            <li class="extensions__item extension">
+              <img class="extension__img" src="img/opera.svg" alt="Opera logo" width="105" height="100">
+              <h3 class="extension__title">Add to Opera</h3>
+              <p class="extension__browser-version">Minimum version 46</p>
+              <a class="button button--blue button--block" href="https://www.opera.com/ru/download" target="_blank">Add & Install Extension</a>
+              <!-- <img class="extension__bg-img" src="img/extansion-dot.svg" alt=""> -->
+            </li>
+
+          </ul>
+        </div>
       </div>
     </section>
 
