Add FAQ section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,6 @@
               <h3 class="extension__title">Add to Chrome</h3>
               <p class="extension__browser-version">Minimum version 62</p>
               <a class="button button--blue button--block" href="https://www.google.com/chrome/?brand=BNSD&gclid=CjwKCAjw44mlBhAQEiwAqP3eVkNA_AP8Tmx-NdORS6mQQ0a9GTAhLeGKR-ymy-yeRuO4hMImKR6LXRoCUSwQAvD_BwE&gclsrc=aw.ds" target="_blank">Add & Install Extension</a>
-              <!-- <img class="extension__bg-img" src="img/extansion-dot.svg" alt=""> -->
             </li>
 
             <li class="extensions__item extension">
@@ -150,7 +149,6 @@
               <h3 class="extension__title">Add to Firefox</h3>
               <p class="extension__browser-version">Minimum version 55</p>
               <a class="button button--blue button--block" href="https://www.mozilla.org/en-US/firefox/new/" target="_blank">Add & Install Extension</a>
-              <!-- <img class="extension__bg-img" src="img/extansion-dot.svg" alt=""> -->
             </li>
 
             <li class="extensions__item extension">
@@ -158,7 +156,6 @@
               <h3 class="extension__title">Add to Opera</h3>
               <p class="extension__browser-version">Minimum version 46</p>
               <a class="button button--blue button--block" href="https://www.opera.com/ru/download" target="_blank">Add & Install Extension</a>
-              <!-- <img class="extension__bg-img" src="img/extansion-dot.svg" alt=""> -->
             </li>
 
           </ul>
@@ -167,11 +164,75 @@
     </section>
 
     <!-- FAQ -->
-    <section class="section">
+    <section class="faq section">
       <div class="container">
         <div class="section__info">
           <h2 class="section__title">Frequently Asked Questions</h2>
           <p class="section__description">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
+        </div>
+
+        <div class="faq__inner">
+          <div class="faq__accordion">
+            <div class="accordion">
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">What is Bookmark?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
+                    <svg class="accordion__item-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="13" fill="none"><path stroke="currentColor" stroke-width="3" d="m2 2 8 8 8-8"/></svg>
+                  </button>
+                </header>
+
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">How can I request a new browser?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
+                    <svg class="accordion__item-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="13" fill="none"><path stroke="currentColor" stroke-width="3" d="m2 2 8 8 8-8"/></svg>
+                  </button>
+                </header>
+
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">Is there a mobile app?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
+                    <svg class="accordion__item-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="13" fill="none"><path stroke="currentColor" stroke-width="3" d="m2 2 8 8 8-8"/></svg>
+                  </button>
+                </header>
+
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+
+              <section class="accordion__item">
+                <header class="accordion__item-header">
+                  <h3 class="accordion__item-title">What about other Chromium browsers?</h3>
+                  <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
+                    <svg class="accordion__item-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="13" fill="none"><path stroke="currentColor" stroke-width="3" d="m2 2 8 8 8-8"/></svg>
+                  </button>
+                </header>
+
+                <div class="accordion__item-content">
+                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                </div>
+              </section>
+            </div>
+          </div>
+
+          <a class="button button--blue" href="">More info</a>
         </div>
       </div>
     </section>
