Edit text in accordion content and add js

--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
         <div class="faq__inner">
           <div class="faq__accordion">
             <div class="accordion">
-              <section class="accordion__item">
+
+              <section class="accordion__item accordion__item--open">
                 <header class="accordion__item-header">
                   <h3 class="accordion__item-title">What is Bookmark?</h3>
                   <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
@@ -183,8 +184,7 @@
                 </header>
 
                 <div class="accordion__item-content">
-                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                  <p class="accordion__item-text">Vius eros aliquet conultricies.Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros, ultricies non ligula. Suspendisse imperdiet.</p>
                 </div>
               </section>
 
@@ -197,8 +197,7 @@
                 </header>
 
                 <div class="accordion__item-content">
-                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                  <p class="accordion__item-text">TVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
                 </div>
               </section>
 
@@ -212,7 +211,7 @@
 
                 <div class="accordion__item-content">
                   <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula.</p>
                 </div>
               </section>
 
@@ -226,7 +225,7 @@
 
                 <div class="accordion__item-content">
                   <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
                 </div>
               </section>
             </div>
